[gd_scene load_steps=10 format=2]

[ext_resource path="res://title_screen/new-normality.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Fade.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Buttons/CreditsButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Buttons/ExitButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://title_screen/PlexusBackground-cfade9655bc456e944ce9749f812c184f3ea5528/PlexusBackground.tscn" type="PackedScene" id=5]
[ext_resource path="res://title_screen/SupermercadoOne-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://Scenes/Buttons/StartButton.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/Game_Start.gd" type="Script" id=8]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 6 )

[node name="Title" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Logo" type="TextureRect" parent="."]
margin_left = 650.0
margin_top = 180.0
margin_right = 1162.0
margin_bottom = 692.0
texture = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="VBoxContainer" parent="."]
margin_left = 367.0
margin_top = 80.0
margin_right = 912.0
margin_bottom = 177.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Title"]
margin_right = 545.0
margin_bottom = 97.0
custom_fonts/font = SubResource( 1 )
text = "Covid Attack 1.0"
align = 1
valign = 1

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 350.0
margin_top = 300.0
margin_right = 550.0
margin_bottom = 530.0
rect_min_size = Vector2( 100, 150 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterRow" type="HBoxContainer" parent="Menu"]
margin_right = 200.0
margin_bottom = 230.0
size_flags_vertical = 3

[node name="Buttons" type="VBoxContainer" parent="Menu/CenterRow"]
margin_right = 200.0
margin_bottom = 230.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 10
alignment = 1

[node name="Start" parent="Menu/CenterRow/Buttons" instance=ExtResource( 7 )]
margin_left = 0.0
margin_top = 0.0
margin_right = 200.0
margin_bottom = 70.0

[node name="Credits" parent="Menu/CenterRow/Buttons" instance=ExtResource( 3 )]
margin_left = 0.0
margin_top = 80.0
margin_right = 200.0
margin_bottom = 150.0

[node name="Exit" parent="Menu/CenterRow/Buttons" instance=ExtResource( 4 )]
margin_left = 0.0
margin_top = 160.0
margin_right = 200.0
margin_bottom = 230.0
rect_min_size = Vector2( 100, 70 )

[node name="PlexusBackground" parent="." instance=ExtResource( 5 )]
maxDots = 20

[node name="Fade" parent="." instance=ExtResource( 2 )]
visible = false

[connection signal="pressed" from="Menu/CenterRow/Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="fade" from="Fade" to="." method="_on_Fade_fade"]
